# jlpicart

./: .gitignore  README.md
case/: case2.scad
fw/: .gitignore  CMakeLists.txt
fw/cmake/: add_binaries.cmake  add_roms.cmake
fw/ext/: README.md
fw/sdk/: jlpicart_board.h  memmap_jlpicart.ld
fw/src/: board.h  main.cc  util.h
fw/src/adc/: adc.cc  adc.h
fw/src/audio/: psg.cc
fw/src/bus/: bus.cc  bus.h  slot.cc  slot.h
fw/src/cartridges/: cartridge.h  cartridges.cc  config.cc
fw/src/config/: config.cc  config.h
fw/src/debug/: debug_device.h  putchar.c
fw/src/disabled/: cartridge.cc  slot.cc  slot.h
fw/src/esp32/: esp32.cc  esp32.h  esp_jlpicart_port.cc
fw/src/mappers/: mappers.h
fw/src/multitask/: multitask.cc  multitask.h
fw/src/oled/: ssd1306.cc  ssd1306.h
fw/src/roms/: pwnd.rom.cc  roms.h
fw/src/usb/: old_usb_tests.cc  tusb_config.h
fw/src/video/: crt.cc  crt.h  crt.pio  tms9918i.cc  tms9918i.h  vdp99x8.cc  vdp99x8.h
fw/src/z80stub/: z80stub.cc  z80stub.h
fw/util/: flash_swr.bat  generate_roms.txt
fw/z80stub/: Makefile  megalinker  megalinker.cc  z80stub.s
pcb/minipi/: #auto_saved_files#  fp-info-cache  fp-lib-table  minipi.kicad_pcb  minipi.kicad_prl  minipi.kicad_pro  minipi.kicad_sch  minipi.kicad_sch-bak  minipi.step  minipi.xml  sym-lib-table
pcb/minipi/Libraries/BPI.pretty/: BananaPI M2 Zero - SMD.kicad_mod  BananaPI M2 Zero.kicad_mod  BananaPI M2 Zero.kicad_mod_old  ILI9341 TFT LCD 24 modul.kicad_mod  ILI9341 TFT LCD 3,2 modul.kicad_mod  Orange Pi Zero 3 - copy.kicad_mod  Orange Pi Zero 3.kicad_mod
pcb/minipi/Libraries/Footprints/: DSL_Cartridge_Reader.kicad_mod  msx_cartridge - cap cutoff.kicad_mod  msx_cartridge.kicad_mod  msx_cartridge_basic.kicad_mod
pcb/minipi/Libraries/Symbols/: banana_pi_m2_zero.bak  banana_pi_m2_zero.kicad_sym  banana_pi_m2_zero.kicad_sym2  msx-cartridge_dummy.kicad_sym  msx.bak  msx.kicad_sym  msx_slot.kicad_sym
sw/: CMakeLists.txt  flash.bat
sw/src/: blink.cc  board.h  bus.pio  main.cc  spelunk-en.rom.cc  tusb_config.h  usb.c  util.h
sw/src/crt/: crt.cc  crt.h  crt.pio
sw/src/lib/tinyusb/hw/bsp/rp2040/: board.h  family.c
sw/src/lib/tinyusb/src/class/msc/: msc_host.c
sw/src/lib/tinyusb/src/common/: tusb_debug.h
sw/src/oled/: oled.cc  oled.h
sw/src/printf/: printf.h  putchar.c
sw/src/roms/: pwnd.rom.cc  roms.h  spelunk-en.rom.cc
sw/src/vdp99x8/: vdp99x8.cc  vdp99x8.h
sw/src/vga/: vga.cc  vga.h  vga.pio  vga_comp.pio
